# otus_dz_1

./: .pre-commit-config.yaml  Dockerfile  README.md  config.toml  pyproject.toml
.github/workflows/: ci.yml
src/: log_analyzer.py  main.py
tests/: test_analyze.py
