[tool.poetry]
name = "nginx-log-analyzer"
version = "0.1.0"
description = "Сервис парсинга логов"
authors = ["Anton"]
license = "MIT"

packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^2.1.1"
structlog = "^23.1.0"
jinja2 = "^3.1.2"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
flake8 = "^7.1.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
exclude = ["venv", "__pycache__", "tests/*"]

[tool.mypy]
python_version = 3.10
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.poetry.scripts]
analyze-logs = "src.main:main"
